# sanic-flutter-auction-system

./: .gitignore  docker-compose.yml  init-mongo.js
backend/: .env  Dockerfile  pyproject.toml  server.py
backend/config/: app_config.py
backend/controllers/: bidding_controller.py  item_controller.py
backend/helpers/: date_helper.py
backend/models/: item.py
backend/routes/: __init__.py
frontend/: .dockerignore  Dockerfile  README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/debug/: AndroidManifest.xml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/id/mnizarzr/auction_system_client/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
