[tool.poetry]
name = "auction-system-backend"
version = "0.1.0"
description = ""
authors = ["Muhamamd Nizar <mnizarzr@gmail.com>", "",""]

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.3.1"
sanic-motor = "^0.6.0"
sanic-ext = "^22.3.1"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
